Media "ended" event incorrectly fires when currentTime is set https://bugs.webkit.org/show_bug.cgi?id=150348 <rdar://problem/24247974>

Reviewed by Jer Noble.

Source/WebCore:

Test: media/media-ended-fired-once.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::invalidateCachedTime): Always mark m_cachedTime as invalid.

LayoutTests:

* media/media-ended-fired-once-expected.txt: Added.
* media/media-ended-fired-once.html: Added.


Canonical link: https://commits.webkit.org/171499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195540 268f45cc-cd09-0410-ab3c-d52691b4dbfc